goit 4 se agrego transitions

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,31 @@
   margin: 0;
   list-style: none;
 }
-
 .link {
   text-decoration: none;
+}
+
+.current {
+  display: inline-block;
+  height: 100%;
+  position: relative;
+  padding: 25px 0;
+  outline: none;
+}
+
+.current:focus::after,
+.current:focus-within::after,
+.current:focus-visible::after,
+.current:hover::after,
+.current:active::after {
+  display: inline-block;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: var(--main--primaryColor);
+  left: 0;
+  bottom: -25px;
 }
 
 .p-0 {
@@ -79,6 +101,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 25px;
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .hero__navigation a:hover {
   color: var(--main--primaryColor);
@@ -97,6 +120,7 @@ body {
 .gallery__item .email {
   fill: #757575;
   margin-right: 10px;
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .gallery__item:hover > .icon,
 .gallery__item:focus > .icon,
@@ -114,6 +138,7 @@ body {
 .gallery__item .telefono {
   fill: #757575;
   margin-right: 10px;
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .gallery__item:hover > .icon,
 .gallery__item:focus > .icon,
@@ -140,6 +165,7 @@ body {
   border-radius: 4px;
   border: 1px solid #afb1b8;
   fill: #afb1b8;
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .container__clientes .icon__clientes:hover {
   fill: var(--main--primaryColor);
@@ -207,6 +233,8 @@ header a {
 
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .buttons .button:hover {
@@ -256,6 +284,25 @@ header a {
   gap: 30px;
 }
 
+.dedicamos {
+  background-color: #212121;
+  position: relative;
+  width: 370px;
+  height: 294px;
+}
+
+.dedicamos-text {
+  width: 370px;
+  height: 70px;
+  position: absolute;
+  bottom: 0;
+
+  background: rgba(47, 48, 58, 0.8);
+  padding: 23px 70px;
+  color: white;
+  text-align: center;
+}
+
 /* estilos quinto section  */
 
 .team__list {
@@ -283,6 +330,7 @@ header a {
   width: 20px;
   height: 20px;
   fill: var(--main--textSecundario);
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .icon__tarjetas:hover {
@@ -319,6 +367,7 @@ header a {
   justify-content: center;
   align-items: center;
   fill: var(--main--textSecundario);
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .icons__item:hover > .icons__link,
 .icons__item:focus > .icons__link,
@@ -450,6 +499,17 @@ footer {
 .header_portfolio.current {
   color: var(--main--primaryColor);
 }
+/* .current::after {
+  content: "";
+
+  left: 0;
+  bottom: -1px;
+  display: inline-block;
+  width: 100px;
+  height: 4px;
+  background-color: blue;
+  border-radius: 2px;
+} */
 
 .box_footer {
   display: flex;
@@ -459,6 +519,7 @@ footer {
   color: var(--main--secundario);
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .box_footer a:hover {
@@ -506,6 +567,7 @@ footer {
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(238, 238, 238);
   border-radius: 4px;
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .item:hover {
